Make fonts load on other servers.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,4 +1,4 @@
-$icon-font-path: "/bower_components/sass-bootstrap/fonts/";
+$icon-font-path: "./../bower_components/sass-bootstrap/fonts/";
 
 @import 'sass-bootstrap/lib/bootstrap';
 
@@ -21,7 +21,11 @@ body {
   bottom: 20px;
   z-index: 2;
   width: 100%;
-  padding: 20px;
+}
+
+#counter-region .shake-detail-msg,
+#counter-region .progress {
+  margin: 0 20%;
 }
 
 .shake-counter p {
