ShakeCounter final tweaks.

--- a/app/scripts/modules/shakeCounter/templates/Slider.ejs
+++ b/app/scripts/modules/shakeCounter/templates/Slider.ejs
@@ -1,4 +1,4 @@
-<p>You must shake your phone <%= tries %> more time<% if ( tries != 1 ) { %>s<% } %> to complete your vote!</p>
+<p class="shake-detail-msg">You must shake your phone <%= tries %> more time<% if ( tries != 1 ) { %>s<% } %> to complete your vote!</p>
 <div class="progress progress-striped active">
   <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: <%= initialPercentage %>%"></div>
 </div>
