--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -15,6 +15,12 @@ body {
   line-height: 1.5;
 }
 
+.preloader {
+  position: relative;
+  top: 50%;
+  margin-top: -150px;
+}
+
 #counter-region {
   position: absolute;
   left: 0px;
